Closed Bug 1619605 Opened 5 years ago Closed 5 years ago

Fix WebAssembly baseline codegen for multi-value calls

Categories

(Core :: JavaScript: WebAssembly, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: wingo, Assigned: wingo)

References

Details

Attachments

(1 file)

Now that both Ion and baseline support multi-value calls, I am finally testing it :) This bug will have a patch that fixes baseline codegen issues.

This patch fixes a few WebAssembly codegen issues in the multi-value
call support, in the baseline compiler.

  • The local variable iterator was incorrectly calculating the range of
    the non-arg locals, and thereby zeroing out the stored stack results
    pointer.

  • Initializing locals from arguments on function entry was erroneously
    treating the synthetic stack results pointer argument as a local.

  • A bug prevented popStackResultsToMemory from actually popping the
    stack.

Pushed by csabou@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/763a5d614242 Fix wasm baseline multi-value codegen r=lth
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: