Bug 1619605 - Fix wasm baseline multi-value codegen r=lth

This patch fixes a few WebAssembly codegen issues in the multi-value
call support, in the baseline compiler.

 * The local variable iterator was incorrectly calculating the range of
   the non-arg locals, and thereby zeroing out the stored stack results
   pointer.

 * Initializing locals from arguments on function entry was erroneously
   treating the synthetic stack results pointer argument as a local.

 * A bug prevented popStackResultsToMemory from actually popping the
   stack.

Differential Revision: https://phabricator.services.mozilla.com/D65130